GpMessages/93513841987800
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: sábado, 15 de junio de 2024 2:50:16</msg><msg code="539" type="100">ERROR 000539:   File "&lt;expression&gt;", line 1
    6.6504763130656368 if 6.6504763130656368 = 0 else 0.1
                                             ^
SyntaxError: invalid syntax
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at sábado, 15 de junio de 2024 2:50:16 (Elapsed Time: 0.20 seconds)</msg></messages>